--- a/src/theme/Animal.css
+++ b/src/theme/Animal.css
@@ -60,13 +60,13 @@ ion-card.hero {
   flex: 1 1 auto;
   --background: url(../assets/images/covers/animal-cover.png) center/contain
     no-repeat;
-  transition: all 0.7s ease;
+  transition: all 0.7s ease-in-out;
 }
 
 ion-card.hero {
   --background: url(../assets/images/covers/color-cover.png) center/contain
     no-repeat;
-  transition: all 0.5s ease;
+  transition: all 0.5s ease-in-out;
 }
 
 ion-card.animal-game-card.scale-up,
@@ -88,6 +88,18 @@ ion-card.animal-card img {
   width: 100%;
   height: auto;
   object-fit: contain;
+}
+
+.hero-letter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
+  height: 50%;
+  flex: 1 1 auto;
+  --background: transparent;
 }
 
 .card-wrapper:first-child {
