style: Enhanced styles custom properties for ion-card and across multiple components to improve UI consistency and enhance user experience

--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -683,8 +683,14 @@ ion-tab-bar {
 
 .letter-card {
   height: 4rem;
+  --background: url(../assets/images/covers/animal-cover.png) center/cover
+    no-repeat;
   background: url(../assets/images/covers/animal-cover.png) center/cover
     no-repeat;
+}
+
+ion-card.card-transparent {
+  --background: transparent;
 }
 
 /* SWIPER */
