--- a/src/components/game/main/GameBoard.css
+++ b/src/components/game/main/GameBoard.css
@@ -1,4 +1,7 @@
 .color-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   box-shadow:
     0px 1px 2px 0px rgba(0, 0, 0, 0.3),
     0px 1px 3px 1px #3d151596;
