--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -638,8 +638,14 @@ video {
 .top-1\/2 {
   top: 50%;
 }
+.top-\[35\%\] {
+  top: 35%;
+}
 .top-\[60\%\] {
   top: 60%;
+}
+.isolation-auto {
+  isolation: auto;
 }
 .z-0 {
   z-index: 0;
@@ -658,6 +664,9 @@ video {
 }
 .m-0 {
   margin: 0px;
+}
+.m-2 {
+  margin: 0.5rem;
 }
 .mx-0 {
   margin-left: 0px;
@@ -679,9 +688,20 @@ video {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+.mb-0 {
+  margin-bottom: 0px;
 }
 .mb-12 {
   margin-bottom: 3rem;
@@ -809,8 +829,8 @@ video {
 .h-screen {
   height: 100vh;
 }
-.h-\[90\%\] {
-  height: 90%;
+.h-\[60\%\] {
+  height: 60%;
 }
 .max-h-screen {
   max-height: 100vh;
@@ -829,9 +849,6 @@ video {
 }
 .w-1\/3 {
   width: 33.333333%;
-}
-.w-1\/4 {
-  width: 25%;
 }
 .w-11 {
   width: 2.75rem;
@@ -911,7 +928,19 @@ video {
 .flex-1 {
   flex: 1 1 0%;
 }
+.flex-\[2\] {
+  flex: 2;
+}
+.flex-auto {
+  flex: 1 1 auto;
+}
+.flex-\[3\] {
+  flex: 3;
+}
 .flex-grow {
+  flex-grow: 1;
+}
+.grow {
   flex-grow: 1;
 }
 .-translate-x-1 {
@@ -1039,6 +1068,9 @@ video {
 .place-items-center {
   place-items: center;
 }
+.items-start {
+  align-items: flex-start;
+}
 .items-center {
   align-items: center;
 }
@@ -1086,6 +1118,9 @@ video {
 }
 .gap-8 {
   gap: 2rem;
+}
+.gap-3 {
+  gap: 0.75rem;
 }
 .gap-x-4 {
   column-gap: 1rem;
@@ -1163,8 +1198,19 @@ video {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 .py-2 {
   padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.pb-2 {
   padding-bottom: 0.5rem;
 }
 .pb-4 {
@@ -1172,6 +1218,12 @@ video {
 }
 .pl-2 {
   padding-left: 0.5rem;
+}
+.pt-2 {
+  padding-top: 0.5rem;
+}
+.pt-4 {
+  padding-top: 1rem;
 }
 .text-center {
   text-align: center;
@@ -1215,6 +1267,37 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+.text-\[10px\] {
+  font-size: 10px;
+}
+.text-\[0\.5rem\] {
+  font-size: 0.5rem;
+}
+.text-\[0\.2rem\] {
+  font-size: 0.2rem;
+}
+.text-\[0\.4rem\] {
+  font-size: 0.4rem;
+}
+.text-\[0\.4vw\] {
+  font-size: 0.4vw;
+}
+.text-\[1vw\] {
+  font-size: 1vw;
+}
+.text-\[1vmin\] {
+  font-size: 1vmin;
+}
+.text-\[2vmin\] {
+  font-size: 2vmin;
+}
+.text-\[1\.5vmin\] {
+  font-size: 1.5vmin;
 }
 .font-bold {
   font-weight: 700;
@@ -1538,10 +1621,6 @@ ion-toolbar {
     width: 80%;
   }
 
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
   .md\:gap-6 {
     gap: 1.5rem;
   }
@@ -1553,20 +1632,12 @@ ion-toolbar {
 }
 
 @media (min-width: 1024px) {
-  .lg\:h-\[60\%\] {
-    height: 60%;
-  }
-
   .lg\:w-1\/2 {
     width: 50%;
   }
 
   .lg\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .lg\:w-1\/5 {
-    width: 20%;
   }
 
   .lg\:grid-cols-3 {
