style: enhance hexagon button styles and update spacing utilities in CSS

--- a/src/theme/ItemNumber.css
+++ b/src/theme/ItemNumber.css
@@ -622,3 +622,68 @@ span.number-label {
   );
   animation: rippleFadeHighlight 1s ease infinite;
 }
+
+.hexagon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  aspect-ratio: 1;
+  clip-path: polygon(
+    98.66024% 45%,
+    99.39693% 46.5798%,
+    99.84808% 48.26352%,
+    100% 50%,
+    99.84808% 51.73648%,
+    99.39693% 53.4202%,
+    98.66025% 55%,
+    78.66025% 89.64102%,
+    77.66044% 91.06889%,
+    76.42788% 92.30146%,
+    75% 93.30127%,
+    73.4202% 94.03794%,
+    71.73648% 94.48909%,
+    70% 94.64102%,
+    30% 94.64102%,
+    28.26352% 94.48909%,
+    26.5798% 94.03794%,
+    25% 93.30127%,
+    23.57212% 92.30146%,
+    22.33956% 91.06889%,
+    21.33975% 89.64102%,
+    1.33975% 55%,
+    0.60307% 53.4202%,
+    0.15192% 51.73648%,
+    0% 50%,
+    0.15192% 48.26352%,
+    0.60307% 46.5798%,
+    1.33975% 45%,
+    21.33975% 10.35898%,
+    22.33956% 8.93111%,
+    23.57212% 7.69854%,
+    25% 6.69873%,
+    26.5798% 5.96206%,
+    28.26352% 5.51091%,
+    30% 5.35898%,
+    70% 5.35898%,
+    71.73648% 5.51091%,
+    73.4202% 5.96206%,
+    75% 6.69873%,
+    76.42788% 7.69854%,
+    77.66044% 8.93111%,
+    78.66025% 10.35898%
+  );
+  background: transparent;
+  box-shadow:
+    0rem 0.125rem 0.5125rem #73ff60 inset,
+    0px 0.5px 5px #f4f9f4 inset;
+  cursor: pointer;
+}
+
+.butt-num:hover .hexagon {
+  background: #abff3d;
+  box-shadow:
+    0rem 0.125rem 0.5125rem #0efa3e inset,
+    0px 0.5px 5px #d0ff01 inset;
+  transition: all 0.2s;
+}
