refactor: optimize ItemNumber and Rules styles for improved layout and responsiveness

--- a/src/theme/ItemNumber.css
+++ b/src/theme/ItemNumber.css
@@ -1,22 +1,9 @@
 .number-btn {
   position: relative;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-
-  margin-left: 2.1875rem;
-  padding: 0.3rem 0.6rem;
-  padding-left: 3rem;
-
-  width: 6rem;
-  height: 4rem;
-
   background-color: var(--ion-color-secondary);
   color: var(--ion-color-primary);
 
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-shadow: 0.0187rem 0.0187rem 0.0625rem #ffffff;
   border-left: solid 0.0625rem var(--ion-color-primary);
   background-image: linear-gradient(
@@ -33,18 +20,16 @@
 }
 
 .number-img-wrapper {
-  position: absolute;
-  top: -2rem;
   display: flex;
   justify-content: center;
-  width: 100%;
-  height: 90%;
+  align-items: center;
+  width: 50%;
 }
 
 .number-img {
   width: 100%;
   height: 100%;
-  filter: drop-shadow(0 0 0.85rem rgb(0, 38, 4));
+  filter: drop-shadow(0 0 1rem rgba(255, 255, 2, 0.479));
 }
 
 .gem-container {
@@ -65,13 +50,7 @@
   width: 1rem;
 }
 
-.number-btn span {
-  margin-top: auto;
-  padding-bottom: 0.5rem;
-}
-
 span.number-label {
-  padding-bottom: 0;
   text-shadow:
     0px 0px 1px #ffffff,
     0 0 10px #fffb00;
@@ -99,8 +78,9 @@ span.number-label {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 4px;
 
-  width: 2.5rem;
+  width: 2rem;
   height: 100%;
 
   font-size: inherit;
@@ -131,7 +111,7 @@ span.number-label {
 }
 
 .number-card {
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: #ffffff;
   text-shadow: 0.0625rem 0.0625rem 0rem #00160c;
   background-image: linear-gradient(
@@ -169,11 +149,7 @@ span.number-label {
 
 @media screen and (min-width: 768px) {
   .number-btn {
-    font-size: 1.6rem;
-    padding: 0.625rem 1.25rem;
-    padding-left: 3rem;
-    width: 8rem;
-    height: 6rem;
+    font-size: 1.4rem;
   }
 
   .number-card {
