--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -602,6 +602,9 @@ video {
 .bottom-\[12\%\] {
   bottom: 12%;
 }
+.bottom-\[5\%\] {
+  bottom: 5%;
+}
 .left-1 {
   left: 0.25rem;
 }
@@ -644,8 +647,29 @@ video {
 .top-\[60\%\] {
   top: 60%;
 }
+.-bottom-1\/2 {
+  bottom: -50%;
+}
+.-bottom-1 {
+  bottom: -0.25rem;
+}
+.top-full {
+  top: 100%;
+}
+.-top-10 {
+  top: -2.5rem;
+}
+.bottom-10 {
+  bottom: 2.5rem;
+}
+.-bottom-40 {
+  bottom: -10rem;
+}
 .isolation-auto {
   isolation: auto;
+}
+.-z-10 {
+  z-index: -10;
 }
 .z-0 {
   z-index: 0;
@@ -655,6 +679,18 @@ video {
 }
 .z-20 {
   z-index: 20;
+}
+.-z-0 {
+  z-index: 0;
+}
+.-z-\[1\] {
+  z-index: -1;
+}
+.-z-\[10\] {
+  z-index: -10;
+}
+.z-\[10\] {
+  z-index: 10;
 }
 .row-span-1 {
   grid-row: span 1 / span 1;
@@ -668,6 +704,9 @@ video {
 .m-2 {
   margin: 0.5rem;
 }
+.m-4 {
+  margin: 1rem;
+}
 .mx-0 {
   margin-left: 0px;
   margin-right: 0px;
@@ -675,6 +714,10 @@ video {
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+}
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -695,6 +738,10 @@ video {
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .my-auto {
   margin-top: auto;
@@ -721,11 +768,17 @@ video {
 .mb-20 {
   margin-bottom: 5rem;
 }
+.mb-24 {
+  margin-bottom: 6rem;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
 }
 .ml-2 {
   margin-left: 0.5rem;
@@ -823,6 +876,12 @@ video {
 .h-\[33\%\] {
   height: 33%;
 }
+.h-\[5vmin\] {
+  height: 5vmin;
+}
+.h-\[6vmin\] {
+  height: 6vmin;
+}
 .h-auto {
   height: auto;
 }
@@ -834,6 +893,9 @@ video {
 }
 .max-h-screen {
   max-height: 100vh;
+}
+.min-h-\[2em\] {
+  min-height: 2em;
 }
 .min-h-full {
   min-height: 100%;
@@ -849,6 +911,9 @@ video {
 }
 .w-1\/3 {
   width: 33.333333%;
+}
+.w-10 {
+  width: 2.5rem;
 }
 .w-11 {
   width: 2.75rem;
@@ -1219,8 +1284,17 @@ video {
 .pb-4 {
   padding-bottom: 1rem;
 }
+.pl-12 {
+  padding-left: 3rem;
+}
 .pl-2 {
   padding-left: 0.5rem;
+}
+.pl-5 {
+  padding-left: 1.25rem;
+}
+.pl-6 {
+  padding-left: 1.5rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -1583,8 +1657,21 @@ ion-toolbar {
     bottom: 10%;
   }
 
+  .md\:my-8 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .md\:h-11 {
+    height: 2.75rem;
+  }
+
   .md\:h-14 {
     height: 3.5rem;
+  }
+
+  .md\:h-\[6vmin\] {
+    height: 6vmin;
   }
 
   .md\:w-14 {
@@ -1593,6 +1680,10 @@ ion-toolbar {
 
   .md\:w-44 {
     width: 11rem;
+  }
+
+  .md\:w-\[6vmin\] {
+    width: 6vmin;
   }
 
   .md\:w-\[80\%\] {
